--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   toast:
+  shared_preferences:
+  image_picker:
+  http:
+  progress_dialog:
+  flutter_rating_bar:
 
 
 # For information on the generic Dart part of this file, see the
