some work at 1:39AM 10/11/2019

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dev_dependencies:
   http:
   progress_dialog:
   flutter_rating_bar:
-
+  dynamic_theme:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
