--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,13 @@ dev_dependencies:
   flutter_rating_bar:
   dynamic_theme:
   device_info:
-  cached_network_image:
+  cached_network_image: 2.0.0-rc
   timeago:
   intl:
+  flutter_cache_manager:
+  random_string:
+  webview_flutter:
+  flutter_webview_plugin:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
