--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dev_dependencies:
   random_string:
   webview_flutter:
   place_picker:
+  url_launcher:
+  rating_bar:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
