--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:icon="@mipmap/ic_launcher"
         android:usesCleartextTraffic="true">
         <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="NOT A CHANCE"/>
+               android:value="API KEY HERE"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
